# Defi-tools

./: .gitignore  README.md
morpho-direct/: .env.example  .gitignore  AGENTS.md  package.json  pnpm-lock.yaml  vercel.json
morpho-direct/app/: globals.css  layout.tsx  page.tsx
morpho-direct/bot/: YnethxExitProxy.sol  YnethxLiquidateExit.sol  compile-deploy.mjs  deploy-liquidate.mjs  generate-wallet.mjs  simulate-liquidate.mjs  (+1 more)
position-monitor/: .env.example  .gitignore  README.md  pyproject.toml  strategies.example.yaml
position-monitor-dashboard/: next.config.ts  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
position-monitor/scripts/: dead_man_runner.py  introspect_morpho.py  probe_address.py
position-monitor/src/: __init__.py  config.py  main.py
position-monitor/src/adapters/: __init__.py  aave.py  apex_omni.py  base.py  etherscan.py  euler.py  hyperliquid.py  morpho.py  pendle.py
position-monitor/src/alerts/: __init__.py  dead_man.py  dedup.py  models.py  thresholds.py
position-monitor/src/api/: __init__.py  routes.py  routes_manual.py  routes_positions.py  routes_strategies_crud.py  server.py
position-monitor/src/models/: __init__.py  position.py
position-monitor/src/notifications/: __init__.py  telegram.py
position-monitor/src/oracles/: __init__.py  base.py  chainlink.py  coingecko.py
position-monitor/src/portfolio/: __init__.py  aggregator.py
position-monitor/src/storage/: __init__.py  db.py  schema.sql
position-monitor/src/strategy_engine/: __init__.py  composite.py
position-monitor/src/sync/: __init__.py  transactions.py
(+178 files in other folders)
